--- a/css/styles.css
+++ b/css/styles.css
@@ -21,13 +21,17 @@ body {
 
 .modal-content {
     background-color: #fff;
-    margin: 10% auto;
+    margin: 80px auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 50%; /* Adjust the width as needed */
-    border-radius: 8px;
+    width: 450px; /* Adjust the width as needed */
+    border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     text-align: center; /* Center the content inside the modal */
+}
+
+.close {
+    color: #ff0000;
 }
 
 .container {
