--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap'); */
 
 body {
-    /* font-family: 'Poppins', sans-serif; */
-    background: #b9b3a9;
+    font-family:Arial, Helvetica, sans-serif;
+    background: #a9b9ac;
     display: flex;
     justify-content: center;
 }
@@ -32,6 +32,18 @@ body {
 
 .close {
     color: #ff0000;
+}
+
+#firstName {
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 10px 10px;
+}
+
+#lastName {
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 10px 10px;
 }
 
 .container {
@@ -64,19 +76,19 @@ h1 {
 .button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #428bca;
+    background-color: #0D8442;
     color: #fff;
     border: none;
     cursor: pointer;
     font-size: 16px;
-    border-radius: 4px;
+    border-radius: 5px;
     transition: background-color 0.3s;
     margin-right: 10px;
     margin-top: 20px;
 }
 
 .button:hover {
-    background-color: #3071a9;
+    background-color: #01a169;
 }
 
 .result {
