--- a/css/modules.css
+++ b/css/modules.css
@@ -3,8 +3,6 @@
 body {
     font-family:Arial, Helvetica, sans-serif;
     background: #a9b9ac;
-    display: flex;
-    justify-content: center;
 }
 
 .modal {
@@ -21,7 +19,7 @@ body {
 
 .modal-content {
     background-color: #fff;
-    margin: 80px auto;
+    margin: 190px auto;
     padding: 20px;
     border: 1px solid #888;
     width: 450px; /* Adjust the width as needed */
@@ -46,10 +44,14 @@ body {
     padding: 10px 10px;
 }
 
+.navbar-brand {
+    width: 20%;
+}
+
 .container {
     width: 450px;
     padding: 20px;
-    margin-top: 80px;
+    margin: 80px auto;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
