--- a/css/modules.css
+++ b/css/modules.css
@@ -102,3 +102,42 @@ h1 {
 .hide{
     display: none;
 }
+
+#btt-button {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    position: fixed;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: background-color .3s, opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+}
+  
+#btt-button::after {
+    content: "\f139";
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 2em;
+    line-height: 50px;
+    color: #888;
+}
+  
+#btt-button:hover {
+    cursor: pointer;
+    background-color: #555;
+}
+  
+#btt-button:active {
+    background-color: #777;
+}
+  
+#btt-button.show {
+    opacity: 0.5;
+    visibility: visible;
+}
