--- a/css/modules.css
+++ b/css/modules.css
@@ -85,7 +85,6 @@ h1 {
     font-size: 16px;
     border-radius: 5px;
     transition: background-color 0.3s;
-    margin-right: 10px;
     margin-top: 20px;
 }
 
@@ -145,4 +144,25 @@ h1 {
 .copyright {
     font-weight: bold;
     text-align: center;    
+}
+
+@media only screen and (max-width: 430px) {
+
+    .modal-content {
+        width: 350px; /* Adjust the width as needed */
+    }
+
+    #firstName {
+        width: 67%;
+    }
+
+    #lastName {
+        width: 67%;
+        margin-top: 20px;
+    }
+
+    .container {
+        width: 350px;
+    }
+
 }
